force-app/main/default/objects/vlocity_cmt__CachedAPIChangeEntry__c/vlocity_cmt__CachedAPIChangeEntry__c.object-meta.xml
<CustomObject>
    <description>This will have the logs of the recomputation batch jobs run against the cached api change objects</description>
    <label>CachedAPIChangeEntry</label>
    <nameField>
        <label>CachedAPIChangeEntry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CachedAPIChangeEntrys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>