force-app/main/default/objects/vlocity_cmt__CachedAPIChangeEntry__c/fields/vlocity_cmt__CachedAPIChange__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CachedAPIChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cached API Change</label>
    <referenceTo>vlocity_cmt__CachedAPIChange__c</referenceTo>
    <relationshipLabel>Cached API Change Relationships</relationshipLabel>
    <relationshipName>CachedAPIChange_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>