force-app/main/default/objects/vlocity_cmt__CachedAPIChangeEntry__c/fields/vlocity_cmt__CacheKey__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CacheKey__c</fullName>
    <description>This is the Cache Key being recomputed.</description>
    <label>CacheKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>