force-app/main/default/objects/vlocity_cmt__CachedAPIChangeEntry__c/fields/vlocity_cmt__CacheManagementLog__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CacheManagementLog__c</fullName>
    <description>This will log the error if any while recomputing</description>
    <label>CacheManagementLog</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>