force-app/main/default/objects/vlocity_cmt__CachedAPIChangeEntry__c/fields/vlocity_cmt__IsProcessed__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>