force-app/main/default/objects/vlocity_cmt__CachedAPIChangeEntry__c/fields/vlocity_cmt__Sequence__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Sequence__c</fullName>
    <description>provide sequence to the records,to maintain order of execution</description>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>